--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "yargs": "^15.3.1"
   },
   "dependencies": {
+    "@selectize/selectize": "^0.15.2",
     "custom-cursor.js": "^1.3.9",
     "gulp-beautify": "^3.0.0",
     "normalize.css": "^8.0.1",
